Updated with CV and favicon.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 
 
-
-<link href="https://fonts.googleapis.com/css?family=Istok+Web" rel="stylesheet">
+        <link rel="shortcut icon" type="image/x-icon" href="/im/favicon.ico">
+        <link href="https://fonts.googleapis.com/css?family=Istok+Web" rel="stylesheet">
         <link href="/css/lindell.css" rel="stylesheet">
         <link href="/vendor/css/bootstrap.min.css" rel="stylesheet">
         <link href="/vendor/css/bootstrap-theme.min.css" rel="stylesheet">
@@ -80,8 +80,8 @@
                         <a href="http://ee.stanford.edu"> Electrical Engineering</a>
                     </div>
 
-                    <a href="/data/resume.pdf" target="_blank" class="btn btn-primary" style="padding: 0.5em; margin-top:-20px; margin-right:20px;">
-                        <i class="fa fa-download"></i> Download Resume
+                    <a href="/data/cv.pdf" target="_blank" class="btn btn-primary" style="padding: 0.5em; margin-top:-20px; margin-right:20px;">
+                        <i class="fa fa-download"></i> Download CV
                     </a>
                     <a href="http://github.com/davelindell" target="_blank" style="margin:20px">
                         <i class="fa fa-3x fa-github" aria-hidden="true"></i>
@@ -298,7 +298,7 @@ Satelliteborne C-band scatterometer measurements of the radar backscatter coeffi
                     <td  class="col-md-4">
                         <div style="font-size:1.5em; margin-top: 30px;"> 
                             March 2016-August-2016<br />
-                            Mankato, MN/Tucson, AZ
+                            Mankato, MN (remote)
                         </div>
                     </td>
                     <td class="col-md-7">
