--- a/reading-list/index.html
+++ b/reading-list/index.html
@@ -62,7 +62,7 @@
           <div class="row">
             <div class="col-md-8 col-md-offset-2">
               <h1>Reading List</h1>
-              <a href="#cHead" class="btn btn-circle page-scroll">
+              <a href="#rHead" class="btn btn-circle page-scroll">
                 <i class="fa fa-angle-double-down animated"></i>
               </a>
             </div>
