--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
         <link rel="shortcut icon" type="image/x-icon" href="/im/favicon.ico">
         <link href="https://fonts.googleapis.com/css?family=Istok+Web" rel="stylesheet">
-        <link href="/css/lindell.css" rel="stylesheet">
-        <link href="/vendor/css/bootstrap.min.css" rel="stylesheet">
-        <link href="/vendor/css/bootstrap-theme.min.css" rel="stylesheet">
-        <link href="/vendor/css/academicons.min.css" rel="stylesheet">
-        <link href="/vendor/css/font-awesome.min.css" rel="stylesheet">
+        <link href="css/lindell.css" rel="stylesheet">
+        <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
+        <link href="vendor/css/bootstrap-theme.min.css" rel="stylesheet">
+        <link href="vendor/css/academicons.min.css" rel="stylesheet">
+        <link href="vendor/css/font-awesome.min.css" rel="stylesheet">
 
 
 
@@ -37,10 +37,10 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li><a href="/#education">Education <span class="sr-only">(current)</span></a></li>
-                        <li><a href="/#research">Research </a></li>
-                        <li><a href="/#publications">Publications </a></li>
-                        <li><a href="/#experience">Experience </a></li>
+                        <li><a href="#education">Education <span class="sr-only">(current)</span></a></li>
+                        <li><a href="#research">Research </a></li>
+                        <li><a href="#publications">Publications </a></li>
+                        <li><a href="#experience">Experience </a></li>
                     </ul>
                     
                     <ul class="nav navbar-nav navbar-right">
@@ -99,8 +99,8 @@
 
                 <div class="col-md-7">
                     <div style='font-size: 5em; font-weight: bold; padding-bottom: 0.3em;'> 
-                        <a href="/im/lindell2.jpg">
-                            <img src="/im/lindell2.jpg"
+                        <a href="im/lindell2.jpg">
+                            <img src="im/lindell2.jpg"
                               width="500" style="border-radius: 10px; margin: 10px; max-width: none; margin-left: 0px; margin-top: 0px"
                               alt="David Lindell"/>
                         </a>
@@ -110,7 +110,7 @@
 
             <div class="row">
                 <div class="col-md-11" style='font-size:1.5em'>
-                    I'm a first-year Ph.D. student at Stanford University. I've previously completed my B.S. and M.S. degrees at Brigham Young University and am interested in problems in imaging, signal processing, computer vision, and remote sensing. I'm currently working in <a href="http://www.computationalimaging.org/"> Stanford's Computational Imaging Lab </a> on ultra-fast imaging techniques. 
+                    I'm a first-year Ph.D. student and Stanford Graduate Fellow at Stanford University. I've previously completed my B.S. and M.S. degrees at Brigham Young University and am interested in problems in imaging, signal processing, computer vision, and remote sensing. I'm currently working in <a href="http://www.computationalimaging.org/"> Stanford's Computational Imaging Lab </a> on imaging with single-photon sensors and virtual reality rendering for natural scenes. 
                 </div>  
             </div>
 
@@ -123,7 +123,7 @@
                     <td class="col-md-1"> 
                         <div style='font-size:1.5em'>
                             <a href=""> 
-                                <img src="/im/su_logo.png"
+                                <img src="im/su_logo.png"
                                   width="95" style="border-radius: 33px; margin: 10px; max-width: none; margin-left: 0px; margin-top: 0px"
                                   alt="stanford"/>
                             </a> 
@@ -145,7 +145,7 @@
                     <td class="col-md-1"> 
                         <div style='font-size:1.5em'>
                             <a href="http://home.byu.edu/home/"> 
-                                <img src="/im/byu_logo.jpg"
+                                <img src="im/byu_logo.jpg"
                                   width="95" style="border-radius: 39px; margin: 10px; max-width: none; margin-left: 0px; margin-top: 0px"
                                   alt="byu"/>
                             </a> 
@@ -182,8 +182,8 @@
                         <div style='font-size:1.5em'>
                             <strong> Stanford University</strong>, Ph.D. Student <br />
                             <i>Advisor:</i> Gordon Wetzstein <br />
-                            <i>Area:</i> Computational Imaging, Transient Imaging <br />
-                            <i>Project:</i> Fast imaging/time of flight imaging with a single photon avalanche diode array.
+                            <i>Area:</i> Computational Imaging, single photon detectors, virtual reality <br />
+                            <i>Project:</i> Reconstruction of transient images, non-line of sight imaging, virtual reality rendering
                         </div>
                     </td>
                 </tr>
@@ -243,7 +243,7 @@ Arctic sea ice can be classified as first-year (FY) or multiyear (MY) based on d
                     </td>
                 </tr>
                 <tr>
-                    <td class="col-md-3"><a href="10.3390/rs8040294" target="_blank"><img width=300 src="im/ascat.png" /></a> </td>
+                    <td class="col-md-3"><a href="http://dx.doi.org/10.3390/rs8040294" target="_blank"><img width=300 src="im/ascat.png" /></a> </td>
                     <td class="col-md-7 col-md-offset-0">
                         <div style='font-size:1.5em'>
                             <strong> Lindell D. B.</strong> and Long D.G, "Multiyear Arctic Ice Classification Using ASCAT and SSMIS," in <i>Remote Sensing</i>, vol. 8, no. 4, 
@@ -289,7 +289,7 @@ Satelliteborne C-band scatterometer measurements of the radar backscatter coeffi
                     <td class="col-md-1"> 
                         <div style='font-size:1.5em'>
                             <a href="http://softwareforhire.com"> 
-                                <img src="/im/sfh.jpg"
+                                <img src="im/sfh.jpg"
                                   width="200" style="border-radius: 0px; margin: 10px; max-width: none; margin-left: 0px; margin-top: 35px"
                                   alt="Software For Hire"/>
                             </a> 
@@ -313,7 +313,7 @@ Satelliteborne C-band scatterometer measurements of the radar backscatter coeffi
                     <td class="col-md-1"> 
                         <div style='font-size:1.5em'>
                             <a href="http://www.rincon.com/"> 
-                                <img src="/im/rincon.jpg"
+                                <img src="im/rincon.jpg"
                                   width="200" style="border-radius: 0px; margin: 10px; max-width: none; margin-left: 0px; margin-top: 0px"
                                   alt="Rincon Research Corporation"/>
                             </a> 
@@ -338,14 +338,14 @@ Satelliteborne C-band scatterometer measurements of the radar backscatter coeffi
 
             </div>
 
-<p>Last updated on 31 Sept 2016</p>
+<p>Last updated on 16 Mar 2016</p>
 
         </div>
 
 
     <!-- jQuery library -->
-    <script src="/vendor/js/jquery-3.1.1.min.js"></script>
-    <script src="/vendor/js/bootstrap.min.js"></script>
+    <script src="vendor/js/jquery-3.1.1.min.js"></script>
+    <script src="vendor/js/bootstrap.min.js"></script>
 
     <!-- Smooth scrolling to specific parts of the page -->
       
