--- a/reading-list/index.html
+++ b/reading-list/index.html
@@ -36,7 +36,7 @@
                   data-toggle="collapse" data-target=".navbar-main-collapse">
             <i class="fa fa-bars"></i>
           </button>
-          <a class="navbar-brand page-scroll" href="https://davelindell.github.io/reading-list">
+          <a class="navbar-brand page-scroll" href="https://stanford.edu/~lindell/reading-list">
             <i class="fa fa-book"></i>  <span class="light">Reading</span> List
           </a>
         </div>
