--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ Satelliteborne C-band scatterometer measurements of the radar backscatter coeffi
                 <tr>
                     <td class="col-md-3">
                         <div style='font-size:1.5em'>
-                            <a href="http://cs231n.stanford.edu/reports/2017/pdfs/230.pdf"> 
+                            <a href="http://stanford.edu/class/ee367/Winter2017/lindell_ee367_win17_report.pdf"> 
                                 <img src="im/im367.png"
                                   width="300" style="border-radius: 0px; margin: 10px; max-width: none; margin-left: 0px; margin-top: 35px"/>
                             </a> 
@@ -370,7 +370,7 @@ Satelliteborne C-band scatterometer measurements of the radar backscatter coeffi
                         </div>
                         <div style='font-size:1.5em'>
                             <a style="cursor: pointer;" class='flip' onclick="$(this).next('.panel').slideToggle();"> [Abstract]</a>
-                            <a style="cursor: pointer;" href="http://cs231n.stanford.edu/reports/2017/pdfs/230.pdf"> [PDF]</a>
+                            <a style="cursor: pointer;" href="http://stanford.edu/class/ee367/Winter2017/lindell_ee367_win17_report.pdf"> [PDF]</a>
                             <a style="cursor: pointer;" href="http://stanford.edu/class/ee367/Winter2017/lindell_ee367_win17_poster.pdf"> [Poster]</a>
                             <a style="cursor: pointer;" href="http://stanford.edu/class/ee367/Winter2017/lindell_ee367_win17_code.zip"> [Code]</a>
                         </div>
