make author names consistent

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                     <td class="col-md-3"><a href="http://www.computationalimaging.org/publications/reconstructing-transient-images-from-single-photon-sensors-cvpr-2017/" target="_blank"><img width=300 src="im/cvpr17.png" /></a> </td>
                     <td class="col-md-7 col-md-offset-0">
                         <div style='font-size:1.5em'>
-                            M. O’Toole, F. Heide, <strong>D. Lindell</strong>, K. Zang, S. Diamond, G. Wetzstein, “Reconstructing Transient Images from Single-Photon Sensors”, <i>IEEE Int. Conference on Computer Vision and Pattern Recognition (CVPR)</i>, 2017.
+                            M. O’Toole, F. Heide, <strong>D. B. Lindell</strong>, K. Zang, S. Diamond, G. Wetzstein, “Reconstructing Transient Images from Single-Photon Sensors”, <i>IEEE Int. Conference on Computer Vision and Pattern Recognition (CVPR)</i>, 2017.
                         </div>
                         <div style='font-size:1.5em'>
                             <a style="cursor: pointer;" class='flip' onclick="$(this).next('.panel').slideToggle();"> [Abstract]</a>
