--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ Arctic sea ice can be classified as first-year (FY) or multiyear (MY) based on d
                     <td class="col-md-3"><a href="http://dx.doi.org/10.3390/rs8040294" target="_blank"><img width=300 src="im/ascat.png" /></a> </td>
                     <td class="col-md-7 col-md-offset-0">
                         <div style='font-size:1.5em'>
-                            <strong> D. B. Lindell</strong> and D.G Long, "Multiyear Arctic Ice Classification Using ASCAT and SSMIS," in <i>Remote Sensing</i>, vol. 8, no. 4, 
+                            <strong> D. B. Lindell</strong> and D. G. Long, "Multiyear Arctic Ice Classification Using ASCAT and SSMIS," in <i>Remote Sensing</i>, vol. 8, no. 4, 
                             pp. 294, Mar. 2016. doi: <a href="http://dx.doi.org/10.3390/rs8040294">10.3390/rs8040294</a>
                         </div>
                         <div style='font-size:1.5em'>
