--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
             <div class="row">
                 <div class="col-md-11" style='font-size:1.5em'>
-                    I'm a second-year Ph.D. student and Stanford Graduate Fellow at Stanford University. I've previously completed my B.S. and M.S. degrees in Electrical Engineering at Brigham Young University and am interested in problems in imaging, optimization, computer vision, and remote sensing. I'm currently working in <a href="http://www.computationalimaging.org/"> Stanford's Computational Imaging Lab </a> on time-of-flight sensors, imaging around corners, and next-generation lidar systems. <strong><i>I'm looking for internships for next summer (2018)</i></strong>.
+                    I'm a second-year Ph.D. student at Stanford University. I've previously completed my B.S. and M.S. degrees in Electrical Engineering at Brigham Young University and am interested in problems in imaging, optimization, computer vision, and remote sensing. I'm currently working in <a href="http://www.computationalimaging.org/"> Stanford's Computational Imaging Lab </a> on time-of-flight sensors, imaging around corners, and next-generation lidar systems.
                 </div>  
             </div>
 
