--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
             <div class="row">
                 <div class="col-md-11" style='font-size:1.5em'>
-                    I'm a second-year Ph.D. student at Stanford University. I completed my B.S. and M.S. degrees in Electrical Engineering at Brigham Young University and am interested in problems in imaging, optimization, computer vision, and remote sensing. I'm currently working in <a href="http://www.computationalimaging.org/"> Stanford's Computational Imaging Lab </a> on time-of-flight sensors, imaging around corners, and next-generation LIDAR systems. <strong></strong>
+                    I'm a third-year Ph.D. student at Stanford University. I completed my B.S. and M.S. degrees in Electrical Engineering at Brigham Young University and am interested in problems in imaging, optimization, computer vision, and remote sensing. I'm currently working in <a href="http://www.computationalimaging.org/"> Stanford's Computational Imaging Lab </a> on time-of-flight sensors, imaging around corners, and next-generation LIDAR systems. <strong></strong>
                 </div>  
             </div>
 
@@ -510,7 +510,7 @@ Satelliteborne C-band scatterometer measurements of the radar backscatter coeffi
 
             </div>
 
-<p>Last updated on 31 May 2018</p>
+<p>Last updated on 8 Oct 2018</p>
 
         </div>
 
